language/move-lang/tests/move_check/parser/invalid_call_lhs_return.exp
error: 

   ┌── tests/move_check/parser/invalid_call_lhs_return.move:3:20 ───
   │
 3 │         (return ())(0, 1);
   │                    - Expected ';'
   │                    ^ Unexpected '('
   │

